--- a/.gitignore
+++ b/.gitignore
@@ -26,8 +26,8 @@ share/python-wheels/
 *.egg
 MANIFEST
 
-.idea
-.vscode
+.idea/
+.vscode/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
