--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 # Book settings
-title: LLM and LOD Workshop Recipes
-author: William J.B. Mattingly
+title: Enriching Digital Heritage with LLMs and Linked Open Data
+author:
 execute:
   execute_notebooks: 'off'
 parse:
   myst_extended_syntax: true
 # Information about where the book exists on the web
 repository:
-  url: https://github.com/wjbmattingly/llm-lod-recipes # Online location of your book
+  url: https://github.com/pelagios/llm-lod-enriching-heritage/tree/main
   branch: main  # Which branch of the repository should be used when creating links (optional)
 html:
   use_edit_page_button: true
