--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Book settings
-title: Enriching Digital Heritage with LLMs and Linked Open Data
+title: Cultural Heritage Connectivity Cookbook (2025 Edition)
 author:
 execute:
   execute_notebooks: 'off'
