--- a/_toc.yml
+++ b/_toc.yml
@@ -8,7 +8,7 @@ parts:
       - file: scenarios/intro
         title: Introduction
       - file: scenarios/scenario_1
-        title: Head of Digital Innovation
+        title: Echoes of History
 
   - caption: LLM Recipes
     numbered: True
