--- a/.github/workflows/sync-readme.yml
+++ b/.github/workflows/sync-readme.yml
@@ -1,62 +1,55 @@
 name: Sync intro.md -> README.md (all folders)
 
 on:
-  workflow_dispatch:
+  workflow_dispatch:          # allows manual run from Actions tab
   push:
     paths:
-      - '**/intro.md'
+      - '**/intro.md'         # triggers when any intro.md changes anywhere
     branches:
-      - main  # <-- adjust to your default branch
+      - main                  # adjust if your default branch is different
 
 jobs:
   sync:
     runs-on: ubuntu-latest
     permissions:
-      contents: write
+      contents: write         # needed for git push
+
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
         with:
-          fetch-depth: 0
+          fetch-depth: 0       # full history so we can push cleanly
 
-      - name: Debug: show branch, tree, and any intro.md
-        shell: bash
-        run: |
-          set -euxo pipefail
-          echo "REF: $GITHUB_REF  SHA: $GITHUB_SHA"
-          echo "Checked-out branch (may be detached HEAD):"
-          git branch --show-current || true
-          pwd
-          ls -la
-          echo "Tracked intro.md via git:"
-          git ls-files '**/intro.md' || true
-          echo "All intro.md via find:"
-          find . -type f -name 'intro.md' -print || true
-
-      - name: Copy intro.md to README.md alongside each file
+      - name: Copy intro.md to README.md (for all folders)
         shell: bash
         run: |
           set -euo pipefail
+
+          echo "🔍 Searching for intro.md files..."
+          # find all intro.md files in the repo (tracked or untracked)
           mapfile -t files < <(find . -type f -name 'intro.md' -print)
+
           if [ ${#files[@]} -eq 0 ]; then
-            echo "No intro.md files found anywhere."
+            echo "No intro.md files found. Nothing to do."
             exit 0
           fi
 
           for f in "${files[@]}"; do
             dir="$(dirname "$f")"
             dest="$dir/README.md"
-            echo "Syncing: $f -> $dest"
+            echo "📄 Syncing: $f -> $dest"
             cp "$f" "$dest"
             git add "$dest"
           done
 
-      - name: Commit if staged changes exist
+      - name: Commit and push if changed
         shell: bash
         run: |
           if git diff --cached --quiet; then
-            echo "No changes to commit."
+            echo "✅ No changes to commit."
             exit 0
           fi
+
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git commit -m "Sync README.md files from intro.md"
